# critical-once-cell

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl
.github/workflows/: rust.yml
src/: lib.rs
